--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 
         <div>
             <
-    </section>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/UURtjMluM6w?si=mlGZ46Mo3lsU5SZf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </section> <iframe width="560" height="315" src="https://www.youtube.com/embed/UURtjMluM6w?si=mlGZ46Mo3lsU5SZf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
 
     <section class="categoria">
